--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,10 +106,12 @@
     <string name="field_recipeName">Entre le nom de ta recette</string>
     <string name="field_username">Nom d\'utilisateur</string>
 
+    <string name="origin_african">Africain</string>
     <string name="origin_american">Américain</string>
+    <string name="origin_asian">Asiatique</string>
+    <string name="origin_british">Anglais</string>
     <string name="origin_chinese">Chinois</string>
     <string name="origin_eastern_european">Est-européen</string>
-    <string name="origin_english">Anglais</string>
     <string name="origin_french">Français</string>
     <string name="origin_german">Allemand</string>
     <string name="origin_greek">Grec</string>
@@ -122,18 +124,19 @@
     <string name="origin_mexican">Mexicain</string>
     <string name="origin_moroccan">Marocain</string>
     <string name="origin_none">Aucun</string>
+    <string name="origin_nordic">Nordique</string>
     <string name="origin_peruvian">Péruvien</string>
     <string name="origin_portuguese">Portugais</string>
-    <string name="origin_south_african">Sud-africain</string>
     <string name="origin_spanish">Espagnol</string>
-    <string name="origin_swedish">Suédois</string>
     <string name="origin_swiss">Suisse</string>
     <string name="origin_thai">Thaïlandais</string>
     <string name="origin_turkish">Turc</string>
     <string name="origin_vietnamese">Vietnamien</string>
 
     <string name="tag_appetizer">Apéro</string>
+    <string name="tag_cocktail">Cocktail</string>
     <string name="tag_dessert">Dessert</string>
+    <string name="tag_drink">Boisson</string>
     <string name="tag_long_prep_time">Longue préparation</string>
     <string name="tag_main_dish">Plat principal</string>
     <string name="tag_none">Aucun</string>
